--- a/scss/_button.scss
+++ b/scss/_button.scss
@@ -14,7 +14,8 @@
         background-color: $brightBlue;
         box-shadow: 0px 5px 30px -5px $brightBlue;
 
-        &:hover {
+        &:active,
+        &:focus {
             opacity: .8;
         }
     }
@@ -23,7 +24,8 @@
         color: $desaturedBlue;
         font-weight: 900;
 
-        &:hover {
+        &:active,
+        &:focus {
             color: $darkBlue;
         }
     }
